manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sassy
  labels:
    name: sassy
