manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sassy-backend
  namespace: sassy
spec:
  selector:
    app: sassy-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  # ClusterIP or LoadBalancer depending on environment
  type: $EXPOSED_TYPE
