manifests/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: sassy
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:PUT_A_REAL_ACCOUNT_ID_HERE:certificate/937f0eee-396b-4092-adfe-0b27e44207fc
    alb.ingress.kubernetes.io/conditions.sassy-backend: >
      [{"field":"http-header","httpHeaderConfig":{"httpHeaderName":"x-auth-token","values":["fd3b62e0-9c28-4382-9696-5ceb610901b9"]}}]
    
  labels:
    app: backend-ingress
spec:
  ingressClassName: alb
  rules:
    - host: mytotallyserioussaasbusiness.com
      http:
        paths:
          - path: /api/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: sassy-backend
                port:
                  number: 80
  tls:
    - hosts:
        - mytotallyserioussaasbusiness.com
